# stellar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROGRESSION.md  README.md  stellar.toml
src/: config.rs  duplicates.rs  history.rs  lock.rs  main.rs  modes.rs  organizer.rs  renamer.rs  scanner.rs  stats.rs  tests.rs  ui.rs  watcher.rs
src/interactive/: mod.rs  security.rs  settings.rs
src/vault/: commands.rs  crypto.rs  locker.rs  mod.rs  recovery.rs  storage.rs
